<resources>
    <string name="app_name">My plants</string>
    <string name="event_name">Название события</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="your_plant_pic">Фото растения</string>
    <string name="your_plant_name">Название растения</string>
    <string name="your_plant_temperature">Комфортная температура</string>
    <string name="your_plant_light">Освещение</string>
    <string name="your_plant_watering_inp">Регулярность полива (в днях)</string>
    <string name="your_plant_fertilize_inp">Регулярность удобрения (в днях)</string>
    <string name="your_plant_watering">Полив</string>
    <string name="your_plant_fertilize">Удобрение</string>
    <string name="your_plant_info">Дополнительно</string>
    <string name="your_plant_humidity">Влажность воздуха</string>
    <string name="your_plant_amount">У меня:</string>
    <string name="note_name">Название заметки</string>
    <string name="note_text">Текст заметки</string>
    <string name="pick_image_intent">Выбрать фото</string>
    <string name="if_delete">Удалить объект?</string>
    <string name="view_info">Посмотреть информацию о растении</string>
    <string name="choosing_hint">выберите ниже</string>
    <string name="create_your_own">Создать свое</string>
    <string name="event">Событие </string>
    <string name="time_to_water">Время полива!</string>
    <string name="choose_default_time">Изменить время по умолчанию</string>
    <string name="choose_language">Выбрать язык</string>
    <string name="choose_theme">Выбрать тему</string>
    <string name="your_notes">Заметки</string>
    <string name="fill_everything">Пожалуйста, заполните все поля</string>
    <string name="not_needed">Не требуется</string>
    <string name="unpretentious">Неприхотливое</string>
    <string name="light1">Солнцелюбивое</string>
    <string name="light2">Не требует солнца</string>
    <string name="light3">Любит тень</string>
    <string name="every_day">Каждый день</string>
    <string name="every1water">Нужно поливать каждый</string>
    <string name="every2water">Нужно поливать каждые</string>
    <string name="every1fertilize">Нужно удобрять каждый</string>
    <string name="every2fertilize">Нужно удобрять каждые</string>
    <string name="day1"> день</string>
    <string name="day2"> дня</string>
    <string name="day3"> дней</string>
    <string name="my_plants_title">Мои растения</string>
    <string name="all_plants_title">Все растения</string>
    <string name="calendar_title">Календарь</string>
    <string name="notes_title">Заметки</string>
    <string name="settings_title">Настройки</string>
    <string name="how_to_order">Упорядочить по</string>
    <string name="no_sensors"> датчики не установлены</string>
    <string name="my_plant">Мое растение</string>
    <string name="of_plant">растения</string>
    <string name="by_date">дате добавления</string>
    <string name="by_name">названию</string>
    <string name="by_temperature">температуре</string>
    <string name="by_light">освещению</string>
    <string name="by_watering">частоте полива</string>
    <string name="by_humidity">влажности</string>
    <string name="by_amount_mine">кол-ву у меня</string>
    <string name="add_sensor">добавить датчик</string>
    <string name="plant_is_ok"> растение в порядке</string>
    <string name="check_plant"> проверьте растение</string>
    <string name="choose_days">На сколько дней вперед планировать события</string>
    <string name="soon_will_be">Скоро появится:)</string>
    <string name="maximum_is_60">Нельзя выбрать более 60 дней</string>
    <string name="minimum_is_7">Нельзя выбрать менее 7 дней</string>

</resources>
