<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="26dp"
    android:layout_marginBottom="28dp"
    android:animateLayoutChanges="true">

    <Button
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/choose_default_time" />

    <Button
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@id/time"
        android:text="@string/choose_language" />

    <Button
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@id/language"
        android:text="@string/choose_theme" />

    <Button
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@id/theme"
        android:text="@string/choose_days" />

</RelativeLayout>