<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/plant_name"
            android:inputType="textLongMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/your_plant_name"/>

        <TextView
            android:id="@+id/plant_temperature"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:layout_below="@+id/plant_name"
            android:text="@string/your_plant_temperature"/>


        <Spinner
            android:id="@+id/choose_temperature"
            android:layout_toEndOf="@id/plant_temperature"
            android:layout_below="@+id/plant_name"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"></Spinner>

        <TextView
            android:id="@+id/plant_watering"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/choose_temperature"
            android:text="@string/your_plant_watering_inp"/>


        <Spinner
            android:id="@+id/choose_watering"
            android:layout_toEndOf="@id/plant_watering"
            android:layout_below="@+id/choose_temperature"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"></Spinner>

        <TextView
            android:id="@+id/plant_fertilize"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/choose_watering"
            android:text="@string/your_plant_fertilize_inp"/>


        <Spinner
            android:id="@+id/choose_fertilize"
            android:layout_toEndOf="@id/plant_fertilize"
            android:layout_below="@+id/choose_watering"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"></Spinner>


        <TextView
            android:id="@+id/plant_humidity"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/choose_fertilize"
            android:text="@string/your_plant_humidity"/>


        <Spinner
            android:id="@+id/choose_humidity"
            android:layout_toEndOf="@id/plant_humidity"
            android:layout_below="@+id/choose_fertilize"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"></Spinner>


        <TextView
            android:id="@+id/plant_light"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/choose_humidity"
            android:text="@string/your_plant_light"/>


        <Spinner
            android:id="@+id/choose_light"
            android:layout_toEndOf="@id/plant_light"
            android:layout_below="@+id/choose_humidity"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"></Spinner>

        <EditText
            android:id="@+id/plant_info"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:layout_below="@+id/choose_light"
            android:hint="@string/your_plant_info"/>

        <Button
            android:id="@+id/choose_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plant_info"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/button_rounded"
            android:text="Выбрать фото"/>

        <ImageView
            android:id="@+id/plant_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/your_plant_pic"
            android:cropToPadding="true"
            android:maxHeight="300dp"
            android:maxWidth="300dp"
            android:layout_below="@+id/choose_pic" />

        <Button
            android:id="@+id/ok_plant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plant_pic"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_plant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plant_pic"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_toEndOf="@+id/ok_plant"
            android:text="@string/cancel" />

    </RelativeLayout>
</ScrollView>